# Student-Seller

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  FORMULA_COMPARISON_REPORT.md  FULL_PROJECT_DOCUMENTATION.md  HOW_TAGS_WORK.md  HOW_VALUATION_WORKS.md  PRD.md  README.md  REPORT.md  TELEGRAM_INTEGRATION.md  _mkdir_docs.py  auth.html  check_data.py  create_dirs.bat  create_test_db.py  docker-compose.yml  employers.css  employers.html  employers.js  hello_world.py  home.css  index.html  prd.json  pyproject.toml  pytest.ini  script.js  seed_students.py  student.css  student.html  student.js  styles.css  tests_output.txt  universities.css  universities.html  ТЗ.md
.github/: copilot-instructions.md  plan.md
app/: auth.py  categorization.py  competence.py  config.py  database.py  discipline_groups.py  embedding_diagnostics.py  embeddings.py  logging_config.py  main.py  models.py  parser.py  schemas.py  student_matching.py  valuation.py  valuation_cache.py  vector_store.py
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vite.config.ts
scripts/: check_telegram.py  choose_best_formula.py  seed_it_students.py  seed_market_snapshot.py  statistical_formula_analysis.py  tg_ask.py  tg_env.ps1  tg_listener.py  tg_notify.py
tasks/: prd-hh-student-evaluator-expansion.md  prd-landing-redesign.md  prd-reproducible-docker-compose-build.md
tests/: conftest.py  test_admin_students.py  test_auth.py  test_categorization.py  test_chat.py  test_diagnostics_api.py  test_discipline_groups.py  test_employer.py  (+10 more)
(+58 files in other folders)
