[project]
name = "hh-parser"
version = "1.0.0"
description = "Парсер вакансий с hh.ru для анализа тегов и зарплат"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn[standard]>=0.27.1",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "httpx>=0.26.0",
    "pydantic-settings>=2.1.0",
    "qdrant-client>=1.7.0",
    "ruff>=0.15.1",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0,<5.0",
    "PyJWT>=2.8.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
